<resources>
    <string name="app_name">Blogger</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="no_internet">No Internet</string>
    <string name="id">14</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="post">Post</string>
</resources>