<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin_mini"
    android:layout_marginTop="@dimen/default_margin_mini"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/default_margin_small"
    app:cardElevation="@dimen/default_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/default_margin_mini">

        <TextView
            android:id="@+id/commentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin_mini"
            android:fontFamily="@font/arsenal_bold"
            android:singleLine="false"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textSize="@dimen/default_text_size_large"
            app:layout_constraintEnd_toStartOf="@+id/commentId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin_mini"
            android:fontFamily="@font/arsenal_bold"
            android:singleLine="false"
            android:text="@string/email"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/commentBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentName" />

        <TextView
            android:id="@+id/commentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_mini"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/arsenal_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin_mini"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:fontFamily="@font/arsenal"
            android:text="@string/body"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>